Second Level Sorting
Signed-off-by: Sohaib Mohamed <sohaib.amhmd@gmail.com>

--- a/1_pandas.ipynb
+++ b/1_pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,11 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel('./Store_Sales.xlsx')"
+    "df = pd.read_excel('./data/Store_Sales.xlsx')"
    ]
   },
   {
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
        "Name: Sales, dtype: float64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
        "Name: foo, dtype: object"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,6 +76,294 @@
     "# df['Sales'] = df['Sales'].map('{:,.2f}'.format) ### In-place\n",
     "df['foo'] = df['Sales'].map('{:,.2f}'.format)\n",
     "df['foo'].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# الـ Second level sorting\n",
+    "برتب الداتا بناء على عمودين: او two levels\n",
+    "المستوى الأول هو التاريخ عادى: مثلا من اقدم تاريخ لاحدث تاريخ\n",
+    "كدا هيكون عندنا مبيعات كتيره لكل يوم والايام مترتبه من الاقدم للاحدث.\n",
+    "المستوى الثانى عايز الـ rows تترتب من الاكثر مبيعاً للاقل مبيعا.\n",
+    "عملتها"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Order ID</th>\n",
+       "      <th>Order Date</th>\n",
+       "      <th>Order Priority</th>\n",
+       "      <th>Order Quantity</th>\n",
+       "      <th>Sales</th>\n",
+       "      <th>Ship Mode</th>\n",
+       "      <th>Shipping Cost</th>\n",
+       "      <th>Province</th>\n",
+       "      <th>Customer Segment</th>\n",
+       "      <th>Product Category</th>\n",
+       "      <th>Product Sub-Category</th>\n",
+       "      <th>Product Container</th>\n",
+       "      <th>Ship Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7983</th>\n",
+       "      <td>13729</td>\n",
+       "      <td>2016-01-01</td>\n",
+       "      <td>Not Specified</td>\n",
+       "      <td>9</td>\n",
+       "      <td>933.5500</td>\n",
+       "      <td>Express Air</td>\n",
+       "      <td>37.5</td>\n",
+       "      <td>Quebec</td>\n",
+       "      <td>Home Office</td>\n",
+       "      <td>Office Supplies</td>\n",
+       "      <td>Storage &amp; Organization</td>\n",
+       "      <td>Large Box</td>\n",
+       "      <td>2016-01-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6840</th>\n",
+       "      <td>28774</td>\n",
+       "      <td>2016-01-01</td>\n",
+       "      <td>High</td>\n",
+       "      <td>32</td>\n",
+       "      <td>192.9900</td>\n",
+       "      <td>Regular Air</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Ontario</td>\n",
+       "      <td>Small Business</td>\n",
+       "      <td>Office Supplies</td>\n",
+       "      <td>Storage &amp; Organization</td>\n",
+       "      <td>Small Box</td>\n",
+       "      <td>2016-01-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2389</th>\n",
+       "      <td>37537</td>\n",
+       "      <td>2016-01-02</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>32</td>\n",
+       "      <td>5245.5500</td>\n",
+       "      <td>Regular Air</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>British Columbia</td>\n",
+       "      <td>Corporate</td>\n",
+       "      <td>Office Supplies</td>\n",
+       "      <td>Storage &amp; Organization</td>\n",
+       "      <td>Small Box</td>\n",
+       "      <td>2016-01-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7437</th>\n",
+       "      <td>37537</td>\n",
+       "      <td>2016-01-02</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>43</td>\n",
+       "      <td>4369.0133</td>\n",
+       "      <td>Delivery Truck</td>\n",
+       "      <td>48.2</td>\n",
+       "      <td>British Columbia</td>\n",
+       "      <td>Corporate</td>\n",
+       "      <td>Furniture</td>\n",
+       "      <td>Chairs &amp; Chairmats</td>\n",
+       "      <td>Jumbo Drum</td>\n",
+       "      <td>2016-01-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>37537</td>\n",
+       "      <td>2016-01-02</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1325.7900</td>\n",
+       "      <td>Delivery Truck</td>\n",
+       "      <td>52.2</td>\n",
+       "      <td>British Columbia</td>\n",
+       "      <td>Corporate</td>\n",
+       "      <td>Furniture</td>\n",
+       "      <td>Chairs &amp; Chairmats</td>\n",
+       "      <td>Jumbo Drum</td>\n",
+       "      <td>2016-01-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5223</th>\n",
+       "      <td>47815</td>\n",
+       "      <td>2019-12-30</td>\n",
+       "      <td>Not Specified</td>\n",
+       "      <td>45</td>\n",
+       "      <td>621.6300</td>\n",
+       "      <td>Regular Air</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>New Brunswick</td>\n",
+       "      <td>Small Business</td>\n",
+       "      <td>Furniture</td>\n",
+       "      <td>Office Furnishings</td>\n",
+       "      <td>Wrap Bag</td>\n",
+       "      <td>2019-12-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4114</th>\n",
+       "      <td>50950</td>\n",
+       "      <td>2019-12-30</td>\n",
+       "      <td>Not Specified</td>\n",
+       "      <td>35</td>\n",
+       "      <td>479.4670</td>\n",
+       "      <td>Express Air</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>British Columbia</td>\n",
+       "      <td>Corporate</td>\n",
+       "      <td>Office Supplies</td>\n",
+       "      <td>Storage &amp; Organization</td>\n",
+       "      <td>Small Box</td>\n",
+       "      <td>2019-12-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5978</th>\n",
+       "      <td>50950</td>\n",
+       "      <td>2019-12-30</td>\n",
+       "      <td>Not Specified</td>\n",
+       "      <td>6</td>\n",
+       "      <td>418.5000</td>\n",
+       "      <td>Delivery Truck</td>\n",
+       "      <td>32.1</td>\n",
+       "      <td>British Columbia</td>\n",
+       "      <td>Corporate</td>\n",
+       "      <td>Furniture</td>\n",
+       "      <td>Chairs &amp; Chairmats</td>\n",
+       "      <td>Jumbo Drum</td>\n",
+       "      <td>2019-12-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6210</th>\n",
+       "      <td>25542</td>\n",
+       "      <td>2019-12-30</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>37</td>\n",
+       "      <td>275.4800</td>\n",
+       "      <td>Express Air</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>Ontario</td>\n",
+       "      <td>Home Office</td>\n",
+       "      <td>Office Supplies</td>\n",
+       "      <td>Paper</td>\n",
+       "      <td>Wrap Bag</td>\n",
+       "      <td>2019-12-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3857</th>\n",
+       "      <td>45127</td>\n",
+       "      <td>2019-12-30</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>10</td>\n",
+       "      <td>15.1405</td>\n",
+       "      <td>Regular Air</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>Manitoba</td>\n",
+       "      <td>Consumer</td>\n",
+       "      <td>Office Supplies</td>\n",
+       "      <td>Rubber Bands</td>\n",
+       "      <td>Wrap Bag</td>\n",
+       "      <td>2019-12-30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8399 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Order ID Order Date Order Priority  Order Quantity      Sales  \\\n",
+       "7983     13729 2016-01-01  Not Specified               9   933.5500   \n",
+       "6840     28774 2016-01-01           High              32   192.9900   \n",
+       "2389     37537 2016-01-02            Low              32  5245.5500   \n",
+       "7437     37537 2016-01-02            Low              43  4369.0133   \n",
+       "26       37537 2016-01-02            Low               4  1325.7900   \n",
+       "...        ...        ...            ...             ...        ...   \n",
+       "5223     47815 2019-12-30  Not Specified              45   621.6300   \n",
+       "4114     50950 2019-12-30  Not Specified              35   479.4670   \n",
+       "5978     50950 2019-12-30  Not Specified               6   418.5000   \n",
+       "6210     25542 2019-12-30            Low              37   275.4800   \n",
+       "3857     45127 2019-12-30         Medium              10    15.1405   \n",
+       "\n",
+       "           Ship Mode  Shipping Cost          Province Customer Segment  \\\n",
+       "7983     Express Air           37.5            Quebec      Home Office   \n",
+       "6840     Regular Air            5.0           Ontario   Small Business   \n",
+       "2389     Regular Air            7.6  British Columbia        Corporate   \n",
+       "7437  Delivery Truck           48.2  British Columbia        Corporate   \n",
+       "26    Delivery Truck           52.2  British Columbia        Corporate   \n",
+       "...              ...            ...               ...              ...   \n",
+       "5223     Regular Air            7.3     New Brunswick   Small Business   \n",
+       "4114     Express Air            4.8  British Columbia        Corporate   \n",
+       "5978  Delivery Truck           32.1  British Columbia        Corporate   \n",
+       "6210     Express Air            4.5           Ontario      Home Office   \n",
+       "3857     Regular Air            0.7          Manitoba         Consumer   \n",
+       "\n",
+       "     Product Category    Product Sub-Category Product Container  Ship Date  \n",
+       "7983  Office Supplies  Storage & Organization         Large Box 2016-01-03  \n",
+       "6840  Office Supplies  Storage & Organization         Small Box 2016-01-02  \n",
+       "2389  Office Supplies  Storage & Organization         Small Box 2016-01-09  \n",
+       "7437        Furniture      Chairs & Chairmats        Jumbo Drum 2016-01-04  \n",
+       "26          Furniture      Chairs & Chairmats        Jumbo Drum 2016-01-02  \n",
+       "...               ...                     ...               ...        ...  \n",
+       "5223        Furniture      Office Furnishings          Wrap Bag 2019-12-30  \n",
+       "4114  Office Supplies  Storage & Organization         Small Box 2019-12-30  \n",
+       "5978        Furniture      Chairs & Chairmats        Jumbo Drum 2019-12-30  \n",
+       "6210  Office Supplies                   Paper          Wrap Bag 2019-12-30  \n",
+       "3857  Office Supplies            Rubber Bands          Wrap Bag 2019-12-30  \n",
+       "\n",
+       "[8399 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_excel('./data/Store_Sales.xlsx')\n",
+    "df.sort_values(['Order Date', 'Sales'], ascending=[True, False])"
    ]
   }
  ],
