trivial: file organization
Signed-off-by: Sohaib Mohamed <sohaib.amhmd@gmail.com>

--- a/pandas_101.ipynb
+++ b/pandas_101.ipynb
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# الـ Second level sorting\n",
+    "# Second level sorting\n",
     "برتب الداتا بناء على عمودين: او two levels\n",
     "المستوى الأول هو التاريخ عادى: مثلا من اقدم تاريخ لاحدث تاريخ\n",
     "كدا هيكون عندنا مبيعات كتيره لكل يوم والايام مترتبه من الاقدم للاحدث.\n",
@@ -369,7 +369,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -383,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
